[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-monitor"
version = "2.1.0"
description = "Enterprise Token Usage Monitoring System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "wuleiyuan", email = "wuleiyuan@gmail.com"}
]
keywords = ["token", "monitoring", "ai", "api", "metrics", "fastapi", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "redis>=4.5.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
token-monitor = "enterprise_api_server:main"

[project.urls]
Homepage = "https://github.com/wuleiyuan/token-monitor"
Repository = "https://github.com/wuleiyuan/token-monitor"
Issues = "https://github.com/wuleiyuan/token-monitor/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]
